@@ -16,9 +16,11 @@
 package org.zirco.ui.activities;
 
 import org.zirco.R;
+import org.zirco.controllers.Controller;
 import org.zirco.model.adapters.HistoryExpandableListAdapter;
 import org.zirco.model.items.HistoryItem;
 import org.zirco.providers.BookmarksProviderWrapper;
+import org.zirco.ui.components.CustomWebView;
 import org.zirco.utils.ApplicationUtils;
 import org.zirco.utils.Constants;
 
@@ -233,6 +235,11 @@ public class HistoryListActivity extends ExpandableListActivity {
 		@Override
 		public void run() {
 			BookmarksProviderWrapper.clearHistoryAndOrBookmarks(getContentResolver(), true, false);
+			
+			for (CustomWebView webView : Controller.getInstance().getWebViewList()) {
+				webView.clearHistory();
+			}
+			
 			handler.sendEmptyMessage(0);
 		}
 
